Fixed Dark Mode button Position

--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
 }
 
-:root{
-  --primary-colour:rgb(9, 51, 114);
+:root {
+  --primary-colour: rgb(9, 51, 114);
 }
-.light-mode{
- --primary-colour:rgb(224, 71, 132);
+
+.light-mode {
+  --primary-colour: rgb(224, 71, 132);
 }
 
 
-.container{
-    background-image: url("/img/light.jpg");
-    transition: background-image 0.75s linear;
-    background-size: 100%;   
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(135, 206, 235);
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container {
+  background-image: url("/img/light.jpg");
+  transition: background-image 0.75s linear;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(135, 206, 235);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .title {
-    text-align: center;
+  text-align: center;
 }
-.logo{
+
+.logo {
   max-width: 150px;
 }
-.calculator{
-    height: 500px;
-    width: 400px;
-    background-color: var(--primary-colour);
-    margin: 0 auto;
-    position: relative;
-    
-    top: 20px;
-    border-radius: 10px 10px 10px 10px;
-    box-shadow: 0 8px 16px 0   rgb(64, 112, 184);
+
+.calculator {
+  height: 500px;
+  width: 400px;
+  background-color: var(--primary-colour);
+  margin: 0 auto;
+  position: relative;
+
+  top: 20px;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 0 8px 16px 0 rgb(64, 112, 184);
 }
+
 .container {
   background-color: rgb(135, 206, 235);
   height: 100vh;
@@ -49,11 +55,11 @@
   align-items: center;
 }
 
-.container h1{
+.container h1 {
   font-family: 'Roboto', sans-serif;
   color: aliceblue;
-  text-shadow: 2px 7px 5px rgba(0,0,0,0.4), 
-  0px -4px 10px rgba(255,255,255,0.3);
+  text-shadow: 2px 7px 5px rgba(0, 0, 0, 0.4),
+    0px -4px 10px rgba(255, 255, 255, 0.3);
 }
 
 .title {
@@ -61,16 +67,14 @@
   text-align: center;
   font-family: 'Poppins', sans-serif;
 }
+
 .calculator {
-<<<<<<< HEAD
-  height: 500px;
+  <<<<<<< HEAD height: 500px;
   width: 400px;
-  background-color:var(--primary-colour);
-=======
-  height: 60%;
+  background-color: var(--primary-colour);
+  =======height: 60%;
   width: 25%;
->>>>>>> 5cb7a3c0d56ce203141eedd28b15428fe62135e2
-  margin: 0 auto;
+  >>>>>>>5cb7a3c0d56ce203141eedd28b15428fe62135e2 margin: 0 auto;
   position: relative;
 
   top: 20px;
@@ -179,6 +183,7 @@ button:nth-child(20) {
   background-color: black;
   color: white;
 }
+
 footer {
   background-color: rgb(135, 206, 235);
   text-align: center;
@@ -191,5 +196,5 @@ footer {
 /* For darkmode */
 #darkmode-icon {
   height: 30px;
+  padding-bottom: 10px;
 }
-
